# Open_Infra

./: CMakeLists.txt  README.md
attempt/: CMakeLists.txt  IfcBSplineCurve.hpp  IfcBSplineCurveForm.hpp  IfcBSplineCurveWithKnots.hpp  IfcBSplineTest.cpp  IfcCartesianPoint.hpp  IfcCurve.hpp  IfcLengthMeasure.hpp  IfcParameterValue.hpp  ifc.cpp  info.h  new.cpp  property.hpp  type.hpp  variant.hpp
generator/: CustomGenerator.cpp  CustomGenerator.h
